--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,11 @@
 {
-    "hosting": {
-        "public": "www"
-    }
+  "hosting": {
+    "public": "www"
+  },
+  "functions": {
+    "predeploy": [
+      "npm --prefix $RESOURCE_DIR run lint",
+      "npm --prefix $RESOURCE_DIR run build"
+    ]
+  }
 }
